tests/snapshots/integration_tests__example_match_inline_test.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron DimensionRouterInline(out_dim):
  inputs:
    default: [batch, in_dim]
  outputs:
    default: [batch, out_dim]
  graph:
    in -> match:
      [batch, d] where (d > 1024): Linear#0(d, 512) -> Linear#1(512, out_dim)
      [batch, d] where (d > 256): Linear#2(d, out_dim)
      [batch, d]: Linear#3(d, out_dim)
    match:
      [batch, d] where (d > 1024): Linear#0(d, 512) -> Linear#1(512, out_dim)
      [batch, d] where (d > 256): Linear#2(d, out_dim)
      [batch, d]: Linear#3(d, out_dim) -> out

neuron Linear(in_dim, out_dim):
  inputs:
    default: [*, in_dim]
  outputs:
    default: [*, out_dim]
  impl:
    Source: core,nn/Linear
