tests/snapshots/integration_tests__example_match_multiline.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron DimensionRouterInline(out_dim):
  inputs:
    default: [batch, in_dim]
  outputs:
    default: [batch, out_dim]
  graph:
    in -> match:
      [batch, d] where (d > 1024): Linear#5(d, 512) -> Linear#6(512, out_dim)
      [batch, d] where (d > 256): Linear#7(d, out_dim)
      [batch, d]: Linear#8(d, out_dim)
    match:
      [batch, d] where (d > 1024): Linear#5(d, 512) -> Linear#6(512, out_dim)
      [batch, d] where (d > 256): Linear#7(d, out_dim)
      [batch, d]: Linear#8(d, out_dim) -> out

neuron DimensionRouterMultiLine(out_dim):
  inputs:
    default: [batch, in_dim]
  outputs:
    default: [batch, out_dim]
  graph:
    in -> match:
      [batch, d] where (d > 1024): Linear#0(d, 512) -> Linear#1(512, out_dim)
      [batch, d] where (d > 256): Linear#2(d, out_dim)
      [batch, d]: Linear#3(d, out_dim)
    match:
      [batch, d] where (d > 1024): Linear#0(d, 512) -> Linear#1(512, out_dim)
      [batch, d] where (d > 256): Linear#2(d, out_dim)
      [batch, d]: Linear#3(d, out_dim) -> out
