tests/snapshots/integration_tests__example_primitives_Add.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Add:
  inputs:
    main: [*shape]
    skip: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,structural/Add
