tests/snapshots/integration_tests__example_primitives_Conv2d.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Conv2d(in_channels, out_channels, kernel_size, stride = 1, padding = 0, dilation = 1, groups = 1, bias = true):
  inputs:
    default: [batch, in_channels, height, width]
  outputs:
    default: [batch, out_channels, *, *]
  impl:
    Source: core,convolutions/Conv2d
