tests/snapshots/integration_tests__example_primitives_DropConnect.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron DropConnect(drop_prob):
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,regularization/DropConnect
